fix: Update dark mode blue

--- a/assets/styles/components/_article-list-item.css
+++ b/assets/styles/components/_article-list-item.css
@@ -16,50 +16,45 @@
   }
 
   &__link {
+    color: var(--color-alt);
     text-decoration: underline;
-    text-decoration-thickness: 1px;
+    text-decoration-thickness: 0.0625em;
     text-underline-offset: 0.125em;
-    text-decoration-color: var(--color-primary);
+    text-decoration-color: var(--link-underline);
+    transition: color var(--animation-duration) var(--animation-timing), text-decoration-color var(--animation-duration) var(--animation-timing);
     font-weight: var(--weight-regular);
   }
 
-  &__link:visited {
-    font-weight: var(--weight-light);
+  &__link:hover {
+    color: var(--color-text);
+    text-decoration-color: var(--color-primary);
   }
+
 
   &__meta {
     font-size: var(--font-xs);
-    font-weight: var(--weight-medium);
     display: flex;
-    border-radius: 0.5rem;
     align-self: start;
-    box-shadow:
-      0 0 0 0 hsl(320deg 80% 45% / 30%) inset,
-      0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
-  }
-
-  &__date {
-    text-shadow: 0 -1px hsl(0deg 0% 0% / 30%);
-    background: linear-gradient(180deg, hsl(0deg 0% 100% / 50%), hsl(0deg 0% 0% / 50%)), var(--color-gray-4);
-    background-blend-mode: overlay, normal;
-    color: var(--color-background);
-    padding: 0.125rem 0.5rem;
-    border-radius: 0.5rem 0 0 0.5rem;
+    gap: var(--space-sm);
+    margin-bottom: var(--space-sm);
+    padding: var(--space-1xs) var(--space-sm);
+    border-radius: var(--space-1xs);
+    background-color: hsl(0deg 0% 0% / 5%);
 
     @media (prefers-color-scheme: dark) {
-      text-shadow: 0 1px hsl(0deg 0% 100%);
-      background: linear-gradient(180deg, hsl(0deg 0% 100% / 50%), hsl(0deg 0% 0% / 50%)), var(--color-text);
+      background-color: hsl(0deg 0% 100% / 10%);
     }
   }
 
+  &__date {
+    font-weight: var(--weight-regular);
+  }
+
   &__source {
-    color: var(--color-light);
-    text-shadow: 0 -1px hsl(0deg 0% 0% / 30%);
-    background:
-      linear-gradient(180deg, hsl(0deg 0% 100% / 50%), hsl(0deg 0% 0% / 50%)),
-      var(--gradient) fixed;
-    background-blend-mode: overlay, normal;
-    padding: 0.125rem 0.5rem;
-    border-radius: 0 0.5rem 0.5rem 0;
+    font-weight: var(--weight-medium);
+    background: var(--gradient) fixed;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
   }
 }
